--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+protobuf (3.5.0-4.2) cosmic; urgency=medium
+
+  * try to fix build with python 3.7
+
+ -- Andreas Roth <aroth@arsoft-online.com>  Sat, 13 Oct 2018 14:56:36 +0200
+
 protobuf (3.5.0-4.1) cosmic; urgency=medium
 
   * build for active releases
