--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+protobuf (3.5.0-4.3) cosmic; urgency=medium
+
+  * more fixes
+
+ -- Andreas Roth <aroth@arsoft-online.com>  Sat, 13 Oct 2018 16:01:51 +0200
+
 protobuf (3.5.0-4.2) cosmic; urgency=medium
 
   * try to fix build with python 3.7
