--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+protobuf (3.5.0-4.4) cosmic; urgency=medium
+
+  * more python fixes 
+
+ -- Andreas Roth <aroth@arsoft-online.com>  Sat, 13 Oct 2018 17:20:54 +0200
+
 protobuf (3.5.0-4.3) cosmic; urgency=medium
 
   * more fixes
