--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+protobuf (3.5.0-4.5) cosmic; urgency=medium
+
+  * further extended python patch
+
+ -- Andreas Roth <aroth@arsoft-online.com>  Sat, 13 Oct 2018 17:55:52 +0200
+
 protobuf (3.5.0-4.4) cosmic; urgency=medium
 
   * more python fixes 
